welcome.lessons.welcome.traversal.Snake.scala.error
SnakeBuggle:1: error: Missing closing brace `}' assumed here
def fonctionTest(){
^SnakeBuggle:1: error: expected class or object definition
def fonctionTest(){
^SnakeBuggle:21: error: expected class or object definition
def pasSerpent(){
^SnakeBuggle:34: error: Missing closing brace `}' assumed here
}
^SnakeBuggle:36: error: expected start of definition
override def run() {
         ^